# XML-TV-Fr

./: .dockerignore  .gitignore  Dockerfile  README.md  README_AI_MIGRATION.md  integrity.sha256
python/: pyproject.toml
python/guidelines/: python-style-guide.md
python/tests/unit/: test_provider_infrastructure.py
python/tests/unit/cli/: test_commands.py
python/tests/unit/config/: test_configurator.py
python/tests/unit/core/: test_channels_manager.py
python/tests/unit/export/: test_xml_exporter.py  test_xml_formatter.py
python/tests/unit/providers/: test_migrated_providers.py  (+1 more)
python/xmltvfr/: __init__.py
python/xmltvfr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/xmltvfr/cli/: commands.py
python/xmltvfr/config/: configurator.py
python/xmltvfr/core/: __init__.py  channel_thread.py  channels_manager.py  generator.py  multi_threaded_generator.py  provider_task.py
python/xmltvfr/export/: xml_exporter.py  xml_formatter.py
python/xmltvfr/providers/: _helpers.py  abstract_provider.py  bouygues.py  cache_file.py  cogeco.py  iciradiocanadatele.py  lequipelive.py  linternaute.py  mycanal.py  nouvelobs.py  oqee.py  orange.py  playtv.py  protocol.py  provider_cache.py  proximus.py  rmc.py  sfr.py  sixplay.py  sudinfo.py  tebeosud.py  tele2semaines.py  tele7jours.py  teleboy.py  telecablesat.py  teleloisirs.py  telerama.py  tv5.py  tv5global.py  tvhebdo.py  virginplus.py  voo.py
python/xmltvfr/ui/: layout.py  multi_column_ui.py  progressive_ui.py  ui.py
python/xmltvfr/utils/: logger.py  resource_path.py  terminal_icon.py  utils.py
(+40 files in other folders)
