[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xmltvfr*"]

[project]
name = "xmltvfr"
version = "0.1.0"
description = "XML-TV-Fr: Python EPG generator"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "lxml",
    "tzdata",
]

[project.scripts]
xmltvfr = "xmltvfr.cli.commands:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
